<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/inputDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"/>

    <EditText
        android:id="@+id/inputItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item"/>

    <RadioGroup
        android:id="@+id/flgIncomeExpenditure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/flgExpenditure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenditure"/>

        <RadioButton
            android:id="@+id/flgIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"/>

    </RadioGroup>

    <EditText
        android:id="@+id/inputAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"/>

    <EditText
        android:id="@+id/inputMemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/memo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <Button
            android:id="@+id/back_to_look"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onBackButtonClick"
            android:text="@string/back_button"/>

        <Button
            android:id="@+id/inputClick"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/input"/>



    </LinearLayout>


</LinearLayout>
