<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/fixDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/fixItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/flgIncomeExpenditure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/flgExpenditure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenditure"/>

        <RadioButton
            android:id="@+id/flgIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"/>

    </RadioGroup>

    <EditText
        android:id="@+id/fixAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/fixMemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/back_to_look"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button"/>

</LinearLayout>
